fixed the text-wrap bug on the notification pill

--- a/scss/components/_taskManager.scss
+++ b/scss/components/_taskManager.scss
@@ -371,6 +371,7 @@ $zIndex: 10;
   .task-manager__notification-label {
     position: absolute;
     height: 100%;
+    white-space: nowrap;
     display: flex;
     align-items: center;
     top: 0px;
